--- a/app/index.html
+++ b/app/index.html
@@ -13,6 +13,7 @@
     <!-- endbuild -->
     <!-- build:css(.tmp) styles/main.css -->
     <link rel="stylesheet" href="styles/main.css">
+    <link rel="stylesheet" href="styles/maind3.css">
     <!-- endbuild -->
   </head>
   <body ng-app="offrApp">
@@ -25,7 +26,8 @@
     <div ng-view=""></div>
     
     <footer>
-      By <a href="http://www.robinwieruch.de/">Robin Wieruch</a>
+      <span><a href="#">Imprint</a></span>
+      <span>- Offr by <a href="http://www.robinwieruch.de/">Robin Wieruch</a><span>
     </footer>
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
@@ -55,6 +57,7 @@
     <script src="bower_components/angular-resource/angular-resource.js"></script>
     <script src="bower_components/angular-animate/angular-animate.js"></script>
     <script src="bower_components/angular-route/angular-route.js"></script>
+    <script src="bower_components/d3/d3.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
@@ -63,6 +66,8 @@
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/explore.js"></script>
         <script src="scripts/services/user.js"></script>
+        <script src="scripts/services/d3service.js"></script>
+        <script src="scripts/directives/tagbarchart.js"></script>
         <!-- endbuild -->
 </body>
 </html>
