adds grouped bar chart with hover effect

--- a/app/index.html
+++ b/app/index.html
@@ -72,6 +72,7 @@
         <script src="scripts/services/user.js"></script>
         <script src="scripts/services/d3service.js"></script>
         <script src="scripts/directives/tagbarchart.js"></script>
+        <script src="scripts/directives/groupedbarchart.js"></script>
         <!-- endbuild -->
 </body>
 </html>
