--- a/app/index.html
+++ b/app/index.html
@@ -73,6 +73,7 @@
         <script src="scripts/services/d3service.js"></script>
         <script src="scripts/directives/tagbarchart.js"></script>
         <script src="scripts/directives/groupedbarchart.js"></script>
+        <script src="scripts/directives/piechart.js"></script>
         <!-- endbuild -->
 </body>
 </html>
